Implement OpenAI chat example